--- a/gallerystyle.css
+++ b/gallerystyle.css
@@ -1,27 +1,27 @@
-
-
 .container {
-	display: flex;
-	flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-h1 {
-	color: red;
-	background-color: white;
-	text-align: center;
-	border: 3px solid black;
-	width: 500px;
-	justify-content: center;
-   }
+body {
+  margin-top: 60px;
+  text-align: center;
+  display: block;
+}
 
+.logoSSB {
+  margin: 5px 5px;
+  width: 250px;
+  height: 250px;
+  border-radius: 4px;
+}
 
 img {
-	margin: 5px;
-	align-content: center;
-	transition: all 1s;
-
+  margin: 5px;
+  align-content: center;
+  transition: all 1s;
 }
 
 img:hover {
-	transform: scale(1.2);
+  transform: scale(1.2);
 }
