--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,14 @@ body {
   display: block;
 }
 .logoSSB {
-  margin: 5px 10px;
-  padding: auto;
-  max-width: 100%;
+  margin: 5px 5px;
+  width: 250px;
+  height: 250px;
+  border-radius: 4px;
 }
 
 .bgPic {
-  margin: 10px auto;
+  margin: 10px 5px;
   border-radius: 15px;
   max-width: 100%;
   height: auto;
