--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,6 @@ body {
   .logoSSB {
     width: 220px;
     height: 160px;
-    display: flex;
-    justify-content: center;
+    display: block;
   }
 }
