--- a/gallerystyle.css
+++ b/gallerystyle.css
@@ -33,4 +33,10 @@ img {
     display: flex;
     justify-content: center;
   }
+
+  .logoSSB {
+    width: 120px;
+    height: 120px;
+    text-align: center;
+  }
 }
