--- a/gallerystyle.css
+++ b/gallerystyle.css
@@ -1,25 +1,18 @@
-.container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
 body {
   margin-top: 60px;
   text-align: center;
-  display: block;
+  display: center;
+}
 
-  .logoSSB {
-    margin: 5px 5px;
-    width: 250px;
-    height: 250px;
-    border-radius: 4px;
-  }
+.logoSSB {
+  margin: 5px 5px;
+  width: 250px;
+  height: 250px;
+  border-radius: 4px;
+}
 
-  .pageLink {
-    transition: all 1s;
-    display: flex;
-    justify-content: center;
-  }
+.pageLink {
+  transition: all 1s;
 }
 
 .pageLink:hover {
